# Pyro5

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Readme.md  Readme.rst  mypy.ini  performance4.py  performance5.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: main-ci.yml
Pyro5/: __init__.py  api.py  callcontext.py  client.py  config.py  configuration.py  configure.py  constants.py  core.py  errors.py  futures.py  message.py  nameserver.py  naming.py  naming_storage.py  nsc.py  protocol.py  serializers.py  server.py  socketutil.py  svr_existingconn.py  svr_multiplex.py  svr_threads.py  util.py
Pyro5-firstattempt/: api.py  client.py  config.py  errors.py  nameserver.py  protocol.py  server.py
Pyro5-firstattempt/socketservers/: thread.py
Pyro5-firstattempt/test/: echoserver.py
Pyro5/compatibility/: Pyro4.py
Pyro5/socketservers/: multiplex.py  multiplexserver.py  thread.py  threadpool.py  threadpoolserver.py
Pyro5/test/: __init__.py
Pyro5/utils/: echoserver.py  httpgateway.py
certs/: client_cert.pem  client_key.pem  readme.txt  server_cert.pem  server_key.pem
docs/: requirements.txt
docs/source/: api.rst  (+16 more)
tests/: support.py  test_api.py  test_basics.py  test_client.py  test_core.py  test_daemon.py  test_echoserver.py  test_errors.py  test_httpgateway.py  test_localhost.py  test_msgpack_ext_hook_loadsCall.py  test_naming.py  test_protocol.py  test_pyro4compat.py  test_serialize.py  test_server.py  test_server_timeout.py  test_socketutil.py  test_threadpool.py  test_utils.py
(+382 files in other folders)
