[metadata]
name = Pyro5
version = attr: Pyro5.__version__
description = Remote object communication library, fifth major version
long_description = file: Readme.rst
long_description_content_type = text/x-rst
url = https://github.com/irmen/Pyro5
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = distributed objects, RPC, remote method call, IPC
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Dutch
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
zip_safe = True
include_package_data = False
packages = Pyro5, Pyro5.utils, Pyro5.compatibility
python_requires = >=3.7
install_requires =
    serpent>=1.41

[options.entry_points]
console_scripts =
    pyro5-ns = Pyro5.nameserver:main
    pyro5-nsc = Pyro5.nsc:main
    pyro5-echoserver = Pyro5.utils.echoserver:main
    pyro5-check-config = Pyro5.configure:dump
    pyro5-httpgateway = Pyro5.utils.httpgateway:main

[pycodestyle]
max-line-length = 140
exclude = .git,__pycache__,.tox,docs,tests,build,dist,.eggs,.cache,examples

[tool:pytest]
markers = network: Mark a test as requiring network access
